--- a/.gitignore
+++ b/.gitignore
@@ -1,69 +1,113 @@
-# 1. Python & System Basics
+# ============================================================================
+# Python / Pip
+# ============================================================================
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# 2. Dataset (絕對不能上傳)
-# 忽略特定的資料集資料夾
-BCSS/
-BCSS_512/
-BCSS_dataset/
+# ============================================================================
+# 虛擬環境
+# ============================================================================
+venv/
+.venv
+env/
+ENV/
+env.bak/
+venv.bak/
+
+# ============================================================================
+# IDE 與編輯器
+# ============================================================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+.project
+.pydevproject
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# ============================================================================
+# Jupyter Notebook
+# ============================================================================
+.ipynb_checkpoints
+*.ipynb
+
+# ============================================================================
+# 深度學習訓練相關（大檔案）
+# ============================================================================
+
+# 模型檢查點與訓練結果
+work_dirs/
+work_dirs_p/
+final_results/
+final_result_p/
+final_results_V1/
+tmp_debug_*/
+training_errors/
+training_errors_p/
+
+# 訓練日誌
+*.log
+logs/
+**/*_train.log
+
+# 緩存
+.cache/
+*.cache
+
+# ============================================================================
+# 資料集（避免將資料推送到 GitHub）
+# ============================================================================
 data/
-datasets/
+data_V2/
 
-# 忽略原始的大型壓縮檔
+# 但至少排除以下大型臨時檔案
 *.zip
 *.tar
 *.tar.gz
+*.tar.bz2
 *.rar
 
-# 忽略所有圖片檔案 (避免誤傳 patches)
-# 如果有 README 需要用的圖片，請建立一個 assets 資料夾並用 !assets/ 例外排除
-*.png
-*.jpg
-*.jpeg
-*.tiff
-*.svs
-!assets/*.png
-!assets/*.jpg
-
-# 3. Deep Learning Outputs (訓練產出)
-# PyTorch 模型權重
-*.pth
-*.pt
-*.ckpt
-
-# 訓練 Log 與 Tensorboard
-runs/
-logs/
-*.log
-
-# 預測結果圖或數值
-outputs/
-predictions/
-results/
-submission.csv
-
-# 4. Environment & IDE settings
-# 虛擬環境
-venv/
-env/
-.env
-.venv/
-
-# IDE 設定檔 (VS Code, PyCharm, Jupyter)
-.vscode/
-.idea/
-.ipynb_checkpoints/
-*.ipynb
-
-# 5. Operating System
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# Mac
+# ============================================================================
+# OS 特定檔案
+# ============================================================================
 .DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# ============================================================================
+# 其他
+# ============================================================================
+.env
+.env.local
+.env.*.local
+.coverage
+.coverage.*
+htmlcov/
+.pytest_cache/
